# EP_project

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  main1.cpp  main2.cpp  mbed-os.lib
include/: CMakeLists.txt  adxl.h  tmp.h
src/: CMakeLists.txt  adxl.cpp  tmp.cpp
